# AutoGPT-for-Enterprise

./: .env.example  Plan.md  README.md  app.py  demo.py  graph.html  pyproject.toml  requirements.txt  short_term_memory.db  streamlit_app.py
app/: __init__.py  agent_runner.py  api_schema.py  error_handler.py  logging_config.py  main.py
app/data/: market_research_output_1749493419.json  market_research_output_1749493522.json  market_research_output_1749493715.json  market_research_output_1749493765.json  market_research_output_1749493874.json
autogpt_core/: __init__.py  agent.py  autogpt_agent.py  feedback_loop.py  marketresearchagent.postman_collection.json  planner.py  settings.py
autogpt_core/config/: prompts.py  settings.yaml  subreddits.yaml
autogpt_core/config/prompts/: demand_analysis.yaml  economic_analysis.yaml  email_outreach.yaml  idea_generation.txt  idea_generation.yaml  landing_page.yaml  prompts.py
autogpt_core/core/: README.md  llm_cache.py  llm_service.py  prompt_manager.py  secrets.py  worker.py
autogpt_core/modules/analytics_monitor/: kpi_evaluator.py
autogpt_core/modules/blog_writer/: blog_generator.py
autogpt_core/modules/blog_writer/blog_services/: blog_gen.py  blog_state.py  idea_loader.py  researcher.py  seo_optimizer.py
autogpt_core/modules/email_campaign/: README.md  campaign_manager.py  schema.py
autogpt_core/modules/email_campaign/campaign_services/: email_gen.py  email_monitoring.py  payload_builder.py  sendgrid_integration.py
autogpt_core/modules/email_campaign/memory_logs/: campaign_memory.py
autogpt_core/modules/landing_page_builder/: README.md  builder.py  landing_page_graph.py
autogpt_core/modules/landing_page_builder/page_services/: content_gen.py  image_gen.py  landing_page.py  page_builder.py
autogpt_core/modules/landing_page_builder/templates/: dark.html.j2  minimal.html.j2  modern.html.j2
autogpt_core/modules/market_researcher/: graph.py  market_research.py  nodes.py  rebbit_service.py  state.py  support.py
autogpt_core/modules/market_researcher/services/: reddit_service.py  support_tools.py
autogpt_core/services/: rebbit_service.py  support.py  support_tools.py
autogpt_core/utils/: api_utils.py  helper.py  idea_memory.py  logger.py  validators.py
backend/: agent_runner.py  error_handler.py  main.py
backend/data/: market_research_output_1749558678.json
config/: prompts.py  subreddits.yaml
data/: email_campaign_logs.db  market_research_output_1750860960.json  market_research_output_1750949378.json  market_research_output_1750949874.json  market_research_output_1751130332.json  market_research_output_1751196772.json  market_research_output_1751197039.json  market_research_output_1751197148.json  market_research_output_1751197173.json  market_research_output_1751197219.json  market_research_output_1751197468.json  market_research_output_1751197508.json  market_research_output_1751197673.json  market_research_output_1751197973.json  market_research_output_1751198188.json  market_research_output_1751204588.json  market_research_output_1751206645.json  market_research_output_1751486462.json  market_research_output_1752245009.json  market_research_output_1755627620.json  market_research_output_1759695472.json  short_term_memory.db
data/output/: landing_page.html
modules/analytics_monitor/: traffic_tracker.py
modules/blog_writer.py/: blog_writer.py  wordpress_api.py
modules/landing_page_builder/: content_gen.py  image_gen.py
modules/market_researcher/: rebbit_service.py
retraining/: dataset_collector.py  kpi_rules.py
services/: __init__.py
utils/: __init__.py
